<resources>
    <string name="app_name">Work Workout</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
    <string name="do_workout">Do a workout</string>
    <string name="workouts_history">Stats</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="workout_s_list">Exercises</string>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>


    <string-array name="reminder">
        <item>No reminder</item>
        <item>Every 30 min</item>
        <item>Every hour</item>
        <item>Every 2 hours</item>
        <item>Every 3 hours</item>
        <item>Every 4 hours</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="no_of_exercies">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="countdown">
        <item>No countdown</item>
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
        <item>5 seconds</item>
        <item>6 seconds</item>
        <item>7 seconds</item>
        <item>8 seconds</item>
        <item>9 seconds</item>
        <item>10 seconds</item>
    </string-array>

    <string-array name="countdown_values">
        <item>0</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
    </string-array>

    <string-array name="workout_reminder">
        <item>00:15</item>
        <item>00:30</item>
        <item>00:45</item>
        <item>01:00</item>
        <item>01:15</item>
        <item>01:30</item>
        <item>01:45</item>
        <item>02:00</item>
        <item>02:15</item>
        <item>02:30</item>
        <item>02:45</item>
        <item>03:00</item>
        <item>03:15</item>
        <item>03:30</item>
        <item>03:45</item>
        <item>04:00</item>
    </string-array>

    <string-array name="workout_reminder_value">
        <item>900000</item>
        <item>1800000</item>
        <item>2700000</item>
        <item>3600000</item>
        <item>4500000</item>
        <item>5400000</item>
        <item>6300000</item>
        <item>7200000</item>
        <item>8100000</item>
        <item>9000000</item>
        <item>9900000</item>
        <item>10800000</item>
        <item>11700000</item>
        <item>12600000</item>
        <item>13500000</item>
        <item>14400000</item>
    </string-array>

    <string-array name="age">
        <item>Your age</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="days_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="reminder">Reminder</string>
    <string name="next_reminder">Next reminder</string>
    <string name="reminder_interval">Reminder interval</string>
    <string name="default_value" translatable="false">_ _ : _ _</string>
    <string name="skip_workout">SKIP workout</string>
    <string name="set_interval">Set interval</string>
    <string name="enable_workout_reminder">Enable workout reminder</string>
    <string name="start_workout">Start workout</string>
    <string name="default_hint_header">Drink enough water</string>
    <string name="info_label">info label</string>
    <string name="default_hint_content" translatable="false">Studies show that even mild dehydration (1–3% of body weight) can impair many aspects of brain function.</string>
    <string name="welcome_heading">Welcome to Workout In Work app</string>
    <string name="fill_data_notice">Please fill in some data about you for statistics</string>
    <string name="enter_weight">Enter your weight in kg</string>
    <string name="enter_height">Enter your height in cm</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="page">1 of 2</string>
    <string name="basic_terms_heading">Some basic terms</string>
    <string name="workout_reminder_definition">- you can set reminder to remind you to workout during day in selected interval</string>
    <string name="daily_reminder_definition">- in settings, you can select days on which reminder will remind you to start workout</string>
    <string name="exercise_and_workout">Exercise and workout</string>
    <string name="exercise_and_workout_definition">- exercise is a single specific activity and a part of a workout. You can select which exercise to do and which not.</string>
    <string name="start_app">Start app</string>
    <string name="page2">2 of 2</string>
    <string name="day">Day:</string>
    <string name="first_workout">First workout:</string>
    <string name="last_workout">Last workout:</string>
    <string name="default_date" translatable="false">25.12.2020</string>
    <string name="default_time" translatable="false">07:50</string>
    <string name="default_time_end" translatable="false">16:30</string>
    <string name="workouts_done">Workouts done:</string>
    <string name="default_workdays_number" translatable="false">15</string>
    <string name="loading">Loading…</string>
    <string name="end_workout">End workout</string>
    <string name="finish_today">Finish today</string>
    <string name="next_exercise">Next exercise</string>
    <string name="default_countdown" translatable="false">20s</string>
    <string name="start">Start</string>
    <string name="workouts_done_heading">Workouts done</string>
    <string name="bmi" translatable="false">BMI</string>
    <string name="workdays_done">Workdays done</string>
    <string name="background_image">background image</string>
    <string name="use_in_workout">Use in workout?</string>
    <string name="edit_intensity">Edit intensity:</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="work_workout_two_lines" translatable="false">Work\nWorkout</string>
    <string name="repetitions">Repetitions:</string>
    <string name="disable_workout_reminder">Disable workout reminder</string>
    <string name="pause">Pause</string>
    <string name="finished">Finished</string>
    <string name="duration">Duration:</string>
    <string name="one_more_click">Please click BACK again to exit</string>
    <string name="initial_setup">Initial setup</string>
    <string name="workout">Workout</string>
    <string name="workout_reminder">Workout reminder</string>
    <string name="workout_reminder_description">Select interval between workouts</string>
    <string name="select_workout_reminder_interval">Select workout reminder interval</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="daily_reminder_description">If daily reminder is enabled, workout notification will start on selected days</string>
    <string name="select_days">Select days</string>
    <string name="select_days_description">Select on which days you want to be reminded to start workout</string>
    <string name="lunch_break">Lunch break</string>
    <string name="lunch_break_description">If some workout should appear during selected period, it will be skipped automatically</string>
    <string name="workout_settings">Workout settings</string>
    <string name="number_of_exercises">Number of exercises</string>
    <string name="number_of_exercises_description">Select number of exercises in one workout</string>
    <string name="lunch_start">Lunch break start</string>
    <string name="lunch_end">Lunch break end</string>
    <string name="user_settings">User settings</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="reminders">Reminders</string>
    <string name="daily_reminder_time">Daily reminder time</string>
    <string name="daily_reminder_time_description">Select time on which you want to start for selected days</string>
    <string name="click_again_workout">Please click BACK again to finish workout</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
