<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/user_settings"
        >

        <ListPreference
            android:title="@string/gender"
            android:entries="@array/gender"
            android:entryValues="@array/gender"
            android:key="gender"
            />

        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="age"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/age"
            />

        <EditTextPreference
            android:inputType="number"
            android:key="weight"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/weight" />

        <EditTextPreference
            android:inputType="number"
            android:key="height"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/height" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/reminders"
        >

        <SwitchPreference
            android:defaultValue="false"
            android:key="workout_reminder"
            android:title="@string/workout_reminder"
            android:summary="@string/workout_reminder_description"/>

        <ListPreference
            android:dependency="workout_reminder"
            android:title="@string/select_workout_reminder_interval"
            android:entries="@array/workout_reminder"
            android:entryValues="@array/workout_reminder_value"
            android:defaultValue="7200000"
            android:key="reminder_interval"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="day_reminder"
            android:title="@string/daily_reminder"
            android:summary="@string/daily_reminder_description"
            />
        <MultiSelectListPreference
            android:dependency="day_reminder"
            android:title="@string/select_days"
            android:entries="@array/days"
            android:entryValues="@array/days_values"
            android:key="select_days"
            android:summary="@string/select_days_description"
            />
        <net.trasim.workoutinwork.preferences.TimePreference
            android:dependency="day_reminder"
            android:title="@string/daily_reminder_time"
            android:key="select_days_time"
            android:defaultValue="08:00"
            android:summary="@string/daily_reminder_time_description"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="lunch_break"
            android:title="@string/lunch_break"
            android:summary="@string/lunch_break_description"/>
        <net.trasim.workoutinwork.preferences.TimePreference
            android:dependency="lunch_break"
            android:title="@string/lunch_start"
            android:key="lunch_start"
            android:defaultValue="12:00"/>
        <net.trasim.workoutinwork.preferences.TimePreference
            android:dependency="lunch_break"
            android:title="@string/lunch_end"
            android:key="lunch_end"
            android:defaultValue="13:00"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/workout_settings">
        <ListPreference
            android:title="@string/number_of_exercises"
            android:summary="@string/number_of_exercises_description"
            android:entries="@array/no_of_exercies"
            android:entryValues="@array/no_of_exercies"
            android:key="noOfExercises"
            android:defaultValue="4"
            />
    </PreferenceCategory>

</PreferenceScreen>
